# phasta

./: CMakeLists.txt  README.md
AcuStat/src/: readnblk.f
M2N/src/: readnblk.f
M2NFixBnd/src/: commuMax.f  ctypes.f  readnblk.f
checkphasta/: checkphasta.cpp
converterIO/: CMakeLists.txt  converterN2O.cc  fixBrokenMDS-OrderedPHASTA-Files.cc  fix_BMDS_SyncIO.cc
phSolver/: :q  CMakeLists.txt
phSolver/common/: .nfs0000000e2615528900002995  CMakeLists.txt  Cinput.cc  Makefile  ValType.cc  asbnabi.f  asbwmod.f  asithf.f  aveprep.f  bardmc.f  bcSTG.f  cmass.f  common.h  common_c.h  commu.f  commuX.f  ctypes.f  dtn.f  e3metric.f  eblock.f  eblock.h  elm3SST.f  errorsmooth.f  f3lhs.f  fillsparse.c  fillsparse.f  filtprep.f  findslpw.f  genbc.f  genbkb.f  genbkbPosix.f  genbkbSyncIO.f  genblk.f  genblkPosix.f  genblkSyncIO.f  gendat.f  genibc.f  genini.f  get_a_not_hex.f  getdmc.f  (+35 more)
phSolver/compressible/: BCprofileKW.f  asbflx.f  asbmfg.f  asbres.f  asiflx.f  asigmr.f  asimfg.f  asiq.f  asires.f  bc3bdg.f  bc3lhs.f  bc3res.f  e3.f  e3b.f  e3bvar.f  e3dc.f  e3eig1.f  e3ivar.f  e3ls.f  e3q.f  e3ql.f  e3qvar.f  e3source.f  e3tau.f  elmgmr.f  getdiff.f  itrbc.f  itrdrv.f  itrres.f  rstat.f  slipbc.f  solgmr.f  stats.f  timeseries.f  vorticity.f
phSolver/incompressible/: BCprofile.f  CMakeLists.txt  SSTStress.f  addEddyViscKW.f  advLES.f  asbflx.f  asbmfg.f  asigmr.f  asiq.f  asiqGradV.f  bc3lhs.f  bc3per.f  bflux.f  calc_cfl.f  calc_delt.f  e3.f  e3b.f  e3bvar.f  e3dc.f  e3ivar.f  e3lhs.f  e3q.f  e3qGradV.f  e3ql.f  e3qvar.f  e3res.f  e3source.f  e3stab.f  e3sts.f  elmStats.f  elmgmr.f  errsmooth.f  filters.f  forces.f  ftools.f  genlmass.f  getSol.c  getStsBar.f  getStsBar.f.gather  getdiff.f  (+29 more)
phastaIO/: phastaIO.cc
