project(converterIO)
cmake_minimum_required(VERSION 2.8.5)

if(NOT PHASTA_SKIP_MPI_CHECK)
find_package(MPI REQUIRED)
endif()
add_definitions(-DOMPI_SKIP_MPICXX=1)

include_directories(${MPI_INCLUDE_PATH})
add_executable(fix_BMDS_SyncIO fix_BMDS_SyncIO.cc)
add_executable(fixBrokenMDS-OrderedPHASTA-Files fixBrokenMDS-OrderedPHASTA-Files.cc)
add_executable(converterO2N converterO2N.cc)
add_executable(converterN2O converterN2O.cc)
target_link_libraries(converterO2N phastaIO)
target_link_libraries(converterN2O phastaIO)
target_link_libraries(fixBrokenMDS-OrderedPHASTA-Files phastaIO)
target_link_libraries(fix_BMDS_SyncIO phastaIO)
